2008-05-06  Wakaba  <wakaba@suika.fam.cx>

	* table-script.js: Support for header cell highlighting.

	* table.cgi: Set |id| to cells; it enables the cell highlighting
	feature.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* table-script.js: Table header/footer fill started at a
	wrong point.

2008-05-05  Wakaba  <wakaba@suika.fam.cx>

	* table-script.js: It is now 0-indexed stead
	of 1-indexed (HTML5 revision 1376).

2008-04-29  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Duplicate terms are no longer disallowed (HTML5
	revision 1467).

2008-04-12  Wakaba  <wakaba@suika.fam.cx>

	* parser-manakai.cgi, parser-manakai-interface.en.html: The |innerHTML|
	output mode is split into "|innerHTML| (HTML)" and "|innerHTML| (XML)"
	output modes.

2008-03-29  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: New "URI" section is implemented.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_node_path): Use qualified name, not just
	local name.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_rdf_resource_html): undef vs false bug fixed.

2008-03-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Experimental support for application/rdf+xml type.
	Generate section on RDF triples extracted from the document.
	(print_rdf_section): New function.
	(get_rdf_resource_html): New function.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_label): No-parent case was not considered.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi (get_error_label): Use the error location
	of the parent node, if the node does not have one.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: The ID of the list is now given as an argument.

	* cc.cgi: List of document errors now also expanded by source
	code fragment generated by scripting.
	(get_error_label): Use line/column information from the error
	context node, if any.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Line break treatment was different from
	that of HTML and CSS parsers.
